--- a/railway.toml
+++ b/railway.toml
@@ -1,17 +1,14 @@
-{
-  "build": {
-    "builder": "NIXPACKS",
-    "installCommand": "npm install",
-    "buildCommand": "echo 'No build needed for Node.js server'",
-    "startCommand": "node ai-proxy-server.js"
-  },
-  "deploy": {
-    "startCommand": "node ai-proxy-server.js",
-    "restartPolicyType": "ON_FAILURE",
-    "restartPolicyMaxRetries": 10
-  },
-  "env": {
-    "NODE_ENV": "production",
-    "PORT": "3001"
-  }
-}
+[build]
+builder = "NIXPACKS"
+installCommand = "npm install"
+buildCommand = "echo 'No build needed for Node.js server'"
+startCommand = "node ai-proxy-server.js"
+
+[deploy]
+startCommand = "node ai-proxy-server.js"
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
+
+[env]
+NODE_ENV = "production"
+PORT = "3001"
