--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,17 @@
 [build]
 builder = "NIXPACKS"
 installCommand = "npm install"
-buildCommand = "echo 'No build needed for Node.js server'"
-startCommand = "node ai-proxy-server.js"
+buildCommand = "echo 'Building complete application...'"
+startCommand = "node railway-server.js"
 
 [deploy]
-startCommand = "node ai-proxy-server.js"
+startCommand = "node railway-server.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [env]
 NODE_ENV = "production"
-PORT = "3001"
+PORT = "3000"
+API_KEY = "3402183a-fbff-4f4d-8379-9477281a706c"
+MODEL_NAME = "doubao-1-5-pro-32k-250115"
+API_ENDPOINT = "https://ark.cn-beijing.volces.com/api/v3/chat/completions"
