--- a/railway.toml
+++ b/railway.toml
@@ -2,10 +2,10 @@
 builder = "NIXPACKS"
 installCommand = "npm install"
 buildCommand = "echo 'Building application...'"
-startCommand = "node server.js"
+startCommand = "cd /app && node server.js"
 
 [deploy]
-startCommand = "node server.js"
+startCommand = "cd /app && node server.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
